# cosco_gd

./: .env  .env.example  .gitignore  DEPLOY.md  README.md  _sheet2_preview.json  docker-compose.yml  page-snap2.md  page-snapshot.md
backend/: .dockerignore  .env  .env.example  Dockerfile  README.md  alembic.ini  check_status.json  coord_check.json  corrected_sites.json  dump.rdb  entrypoint.sh  export_corrected_sites.py  final_check.json  fix_all_coords.py  fix_coords_requests.py  fix_failed_coords.py  fix_last_failed.py  fix_pengcheng_mingyan.py  fsh03_result.json  fshtest.json  geocode_results.json  geocode_results.json.old  geocode_results2.json  gom01.json  import_summary.json  manual_fix_coords.py  manual_review.json  pyproject.toml  zero_coords.json
backend/alembic/: env.py
backend/alembic/versions/: 20260516_0001_init_tables.py  20260517_0002_add_flow_od.py  20260521_0003_add_sys_dict.py  20260523_0004_add_repair_tables.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/models/: __init__.py  alert.py  cargo.py  flow_od.py  repair.py  sys_dict.py  throughput.py  vehicle.py  yard.py
backend/app/schemas/: alert.py  cargo.py  data_console.py  flow.py  kpi.py  repair.py  sys_dict.py  throughput.py  yard.py
backend/app/services/: cache.py  dashboard.py  data_console.py  excel_importer.py  mock_data.py  (+2 more)
backend/cosco_gd_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: analyze_main_sheet.py  compute_distances.py  dev_server.sh  import_corrected_sites.py  import_sites_from_excel.py  seed_gd_gx.py  seed_sys_dict.py
(+81 files in other folders)
